services/code-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8443
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: code-server
