services/code-server/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: code-server
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Code Server
    gethomepage.dev/description: VS Code en el navegador
    gethomepage.dev/group: Aplicaciones
    gethomepage.dev/icon: code-server.png
    gethomepage.dev/href: https://code.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - code.bonchan.org
  rules:
    - backendRefs:
        - name: code-server
          port: 8443
      timeouts:
        request: 600s
        backendRequest: 600s
